--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         needs: test
         steps:
             - name: Build from code
-              uses: npm run build
+              run: npm run build
             - name: Upload Artifact
               uses: actions/upload-artifact@v3
               with:
