--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,13 +60,8 @@ jobs:
               uses: actions/download-artifact@v3
               with:
                 name: build-artifact
-            - name: Publish to Cloudflare Pages
-              uses: cloudflare/pages-action@v1
-              with:
-                apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-                accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-                projectName: guafak-checksum-checker
-                directory: . 
-                gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-                branch: master
+            - name: Debugging pwd
+              run: pwd
+            - name: Debugging ls -la
+              run: ls -la
             
